--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Droid+Sans:400,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+
 * {
   margin: 0;
   padding: 0;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-family: "Droid Sans","Roboto",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
   font-size: 1.375rem;
   outline: none;
   border: none;
@@ -46,6 +49,11 @@ div.container div.logo_top, div.container div.logo_top svg, div.container div.lo
   fill: var(--main-color);
   height: 1.5rem;
   line-height: 1.5rem;
+}
+div.container div.logo_top h1 {
+  height: 1.375rem;
+  padding-top: 0.125rem;
+  line-height: 1.375rem;
 }
 div.container div.logo_top svg {
   margin-right: 0.25rem;
@@ -169,7 +177,7 @@ div.row.clear_meter {
 div.row.clear_meter button {
   font-size: 1rem;
   cursor: pointer;
-  font-weight: 500;
+  font-weight: bold;
 }
 div.row.clear_meter button:hover {
   color: var(--main-color);
